# zkp-for-study

./: Cargo.toml  README.md
fft/: Cargo.toml
fft/src/: bit_reverse.rs  domain.rs  fft.rs  ifft.rs  lib.rs  test.rs
fri/: Cargo.toml
fri/src/: fri.rs  lib.rs  proof.rs  tests.rs  transcripts.rs  utils.rs
hash_to_curve/: Cargo.toml
hash_to_curve/src/: lib.rs
ipa/: Cargo.toml
ipa/src/: ipa_halo.rs  lib.rs  transcripts.rs
kzg/: Cargo.toml
kzg/src/: commitment.rs  lib.rs  srs.rs  traits.rs
nova/: Cargo.toml
nova/src/: matrix.rs
plookup/: Cargo.toml
plookup/src/: helpers.rs  lib.rs  prover.rs  table.rs  test.rs  transcripts.rs  verifier.rs
poseidon/: Cargo.toml
poseidon/src/: constants.rs  lib.rs
r1cs/: Cargo.toml
r1cs/src/: constraint_system.rs  lib.rs  linear_combination.rs  matrices.rs
sample_field/: Cargo.toml
sample_field/src/: lib.rs
stark_by_hand/: Cargo.toml
stark_by_hand/src/: column.rs  fibonacci_constraint.rs  field.rs  main.rs  traits.rs  utils.rs
sumcheck/: Cargo.toml
sumcheck/src/: boolean_hypercube.rs  lib.rs  prover.rs  verifier.rs
