[workspace]
members = [
    "kzg",
    "plookup",
    "fri",
    "sumcheck",
    "sample_field",
    "poseidon",
    "ipa",
    "nova",
    "r1cs",
    "fft",
]
resolver = "2"

[workspace.dependencies]
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-poly = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-ec = "0.4.2"


[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
pub-srs = { git =  "https://github.com/confuseSUN/srs" }