[package]
name = "fri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff.workspace=true
ark-std.workspace=true
ark-poly.workspace=true
ark-bls12-381.workspace=true
ark-serialize.workspace=true
merlin = '3.0'
rand_chacha = '0.3'
rand = { version = "0.8", default-features = false, features = ["std_rng"]}
merkle-tree = { git = "https://github.com/confuseSUN/merkle-tree" }


[dependencies.kzg]
path = '../kzg'

[dependencies.plookup]
path = '../plookup'