[package]
name = "hash_to_curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "^0.4.0"
ark-ff = "^0.4.0"
ark-std = "^0.4.0"
sha2 = { version = "0.10", default-features = false }
ark-secp256k1 = "0.4.0"