[package]
name = "ipa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "^0.3.0"
ark-ec = "^0.3.0"
ark-ff = "^0.3.0"
ark-std = "^0.3.0"
ark-poly = "^0.3.0"
merlin = '3.0'
rand = { version = "0.8", default-features = false, features = ["std_rng"]}
rand_chacha = '0.3'