[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "^0.3.0"
ark-ec = "^0.3.0"
ark-ff = "^0.3.0"
ark-std = "^0.3.0"
ark-poly = "^0.3.0"
text_io = "0.1.9"
num-bigint = "0.4"
pub-srs = "0.1.0"