[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381.workspace  = true
ark-ec.workspace  = true
ark-ff.workspace  = true
ark-std.workspace  = true
ark-poly.workspace  = true
text_io = "0.1.9"
num-bigint = "0.4"
pub-srs = "0.1.0"

