[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"

[dev-dependencies]
ark-test-curves = { version = "0.4.0", default-features = false, features = [ "bls12_381_scalar_field" ] }