[package]
name = "plookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = "^0.3.0"
ark-std = "^0.3.0"
ark-ec = "^0.3.0"
ark-ff = "^0.3.0"
ark-serialize = "^0.3.0"
merlin = '3.0'
rand_chacha = '0.3'


[dependencies.study-kzg]
path = '../kzg'
