[package]
name = "plookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly.workspace=true
ark-std.workspace=true
ark-ec.workspace=true
ark-ff.workspace=true
ark-serialize.workspace=true
ark-bls12-381.workspace=true
merlin = '3.0'
rand_chacha = '0.3'


[dependencies.kzg]
path = '../kzg'
