[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff.workspace= true
ark-std.workspace =true
ark-poly.workspace =true
num-bigint = { version = "0.4", default-features = false }


[dependencies.sample_field]
path = '../sample_field'